--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,11 @@
 [metadata]
-name = HPI_seanbreckenridge
+name = HPI_purarue
 version = 0.0.1
 description = "A Python interface to my life"
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/seanbreckenridge/HPI
-author = "Sean Breckenridge"
-author_email = "seanbrecke@gmail.com"
+url = https://github.com/purarue/HPI
+author = "purarue"
 license = MIT
 license_files = LICENSE
 classifiers =
