--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,9 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest]
-        python-version: [ 3.9, "3.10", "3.11", "3.12"]
+        python-version: [ "3.10", "3.11", "3.12", "3.13" ]
         exclude:
           [
-            { platform: macos-latest, python-version: "3.8" },
-            { platform: macos-latest, python-version: "3.9" },
-            { platform: macos-latest, python-version: "3.10" },
             { platform: macos-latest, python-version: "3.11" },
           ]
 
