--- a/setup.cfg
+++ b/setup.cfg
@@ -13,14 +13,13 @@ classifiers =
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
 
 [options]
-python_requires = >=3.8
+python_requires = >3.9
 include_package_data = True
 zip_safe = False
 
