--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,11 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, macos-latest]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
-        exclude:
-          [
-            { platform: macos-latest, python-version: "3.11" },
-            { platform: macos-latest, python-version: "3.12" },
-          ]
+        python-version: ["3.12", "3.13"]
+        # exclude:
+        #   [
+        #     { platform: macos-latest, python-version: "3.12" },
+        #   ]
 
     runs-on: ${{ matrix.platform }}
 
